src/objects/FieloPLT__RewardItem__c.object
<CustomObject>
    <description>Reward item when stock management is &quot;Controlled by item&quot;.</description>
    <fields>
        <fullName>FieloPLT__Code__c</fullName>
        <description>Code from Reward item.</description>
        <inlineHelpText>Code from Reward item.</inlineHelpText>
        <label>Code</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FieloPLT__Quantity__c</fullName>
        <defaultValue>1</defaultValue>
        <description>Number of Reward item.</description>
        <inlineHelpText>Number of Reward item.</inlineHelpText>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloPLT__RedemptionItem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Redemption item linked to a Reward item.</description>
        <inlineHelpText>Redemption item linked to Reward item.</inlineHelpText>
        <label>Redemption Item</label>
        <referenceTo>FieloPLT__RedemptionItem__c</referenceTo>
        <relationshipLabel>Reward Items</relationshipLabel>
        <relationshipName>RewardItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloPLT__Reward__c</fullName>
        <description>Reward from a Reward item.</description>
        <inlineHelpText>Reward from Reward item.</inlineHelpText>
        <label>Reward</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>FieloPLT__Reward__c.FieloPLT__StockManagement__c</field>
                <operation>notEqual</operation>
                <value>Unlimited</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>FieloPLT__Reward__c</referenceTo>
        <relationshipLabel>Reward Items</relationshipLabel>
        <relationshipName>RewardItems</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>FieloPLT__Status__c</fullName>
        <description>Reward item status.</description>
        <inlineHelpText>Reward item status.</inlineHelpText>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Available</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Unavailable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancel</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Reward Item</label>
    <nameField>
        <displayFormat>IT {00000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reward Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>